src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> ID LPAREN paramList RPAREN LKEY block RKEY
Rule 4     dec -> type ID LPAREN paramList RPAREN LKEY block RKEY
Rule 5     decSeq -> dec
Rule 6     decSeq -> dec decSeq
Rule 7     varDec -> type varSpecSeq SEMICOLON
Rule 8     varSpecSeq -> varSpec
Rule 9     varSpecSeq -> varSpec COMMA varSpecSeq
Rule 10    varSpec -> ID
Rule 11    varSpec -> ID ASSIGN literal
Rule 12    varSpec -> ID LCOR NUMBER RCOR
Rule 13    varSpec -> ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY
Rule 14    type -> INT
Rule 15    type -> STRING
Rule 16    type -> BOOLEAN
Rule 17    block -> varDecList stmtList
Rule 18    stmt -> ifStmt
Rule 19    stmt -> whileStmt
Rule 20    stmt -> forStmt
Rule 21    stmt -> breakStmt
Rule 22    stmt -> returnStmt
Rule 23    stmt -> readStmt
Rule 24    stmt -> writeStmt
Rule 25    stmt -> assign SEMICOLON
Rule 26    stmt -> subCall SEMICOLON
Rule 27    stmt -> error
Rule 28    ifStmt -> IF LPAREN exp RPAREN LKEY block RKEY
Rule 29    ifStmt -> IF LPAREN exp RPAREN LKEY block RKEY ELSE LKEY block RKEY
Rule 30    whileStmt -> WHILE LPAREN exp RPAREN LKEY block RKEY
Rule 31    forStmt -> FOR LPAREN assign SEMICOLON exp SEMICOLON assign RPAREN LKEY block RKEY
Rule 32    breakStmt -> BREAK SEMICOLON
Rule 33    readStmt -> READ var SEMICOLON
Rule 34    writeStmt -> WRITE expList SEMICOLON
Rule 35    returnStmt -> RETURN SEMICOLON
Rule 36    returnStmt -> RETURN exp SEMICOLON
Rule 37    subCall -> ID LPAREN expList RPAREN
Rule 38    assign -> var ASSIGN exp
Rule 39    assign -> var PLUSASSIGN exp
Rule 40    assign -> var MINUSASSIGN exp
Rule 41    assign -> var MULTASSIGN exp
Rule 42    assign -> var DIVIDEASSIGN exp
Rule 43    assign -> var MODASSIGN exp
Rule 44    exp -> exp PLUS exp
Rule 45    exp -> exp MINUS exp
Rule 46    exp -> exp MULT exp
Rule 47    exp -> exp DIVIDE exp
Rule 48    exp -> exp MOD exp
Rule 49    exp -> exp EQUALS exp
Rule 50    exp -> exp DIFFERENT exp
Rule 51    exp -> exp GT exp
Rule 52    exp -> exp GTE exp
Rule 53    exp -> exp LT exp
Rule 54    exp -> exp LTE exp
Rule 55    exp -> exp AND exp
Rule 56    exp -> exp OR exp
Rule 57    exp -> NOT exp
Rule 58    exp -> UMINUS exp
Rule 59    exp -> exp QMARK exp COLON exp
Rule 60    exp -> subCall
Rule 61    exp -> var
Rule 62    exp -> literal
Rule 63    exp -> LPAREN exp RPAREN
Rule 64    var -> ID
Rule 65    var -> ID LCOR exp RCOR
Rule 66    literal -> NUMBER
Rule 67    literal -> STRING_LITERAL
Rule 68    literal -> FALSE
Rule 69    literal -> TRUE
Rule 70    paramList -> paramSeq
Rule 71    paramList -> empty
Rule 72    paramSeq -> param
Rule 73    paramSeq -> param COMMA paramSeq
Rule 74    param -> type ID
Rule 75    param -> type ID LCOR RCOR
Rule 76    varDecList -> varDec varDecList
Rule 77    varDecList -> empty
Rule 78    stmtList -> stmt stmtList
Rule 79    stmtList -> empty
Rule 80    literalSeq -> literal
Rule 81    literalSeq -> literal COMMA literalSeq
Rule 82    expList -> expSeq
Rule 83    expList -> empty
Rule 84    expSeq -> exp
Rule 85    expSeq -> exp COMMA expSeq
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 55
ASSIGN               : 11 13 38
BOOLEAN              : 16
BREAK                : 32
COLON                : 59
COMMA                : 9 73 81 85
DIFFERENT            : 50
DIVIDE               : 47
DIVIDEASSIGN         : 42
ELSE                 : 29
EQUALS               : 49
FALSE                : 68
FOR                  : 31
GT                   : 51
GTE                  : 52
ID                   : 3 4 10 11 12 13 37 64 65 74 75
IF                   : 28 29
INT                  : 14
LCOR                 : 12 13 65 75
LKEY                 : 3 4 13 28 29 29 30 31
LPAREN               : 3 4 28 29 30 31 37 63
LT                   : 53
LTE                  : 54
MINUS                : 45
MINUSASSIGN          : 40
MOD                  : 48
MODASSIGN            : 43
MULT                 : 46
MULTASSIGN           : 41
NOT                  : 57
NUMBER               : 12 13 66
OR                   : 56
PLUS                 : 44
PLUSASSIGN           : 39
QMARK                : 59
RCOR                 : 12 13 65 75
READ                 : 33
RETURN               : 35 36
RKEY                 : 3 4 13 28 29 29 30 31
RPAREN               : 3 4 28 29 30 31 37 63
SEMICOLON            : 7 25 26 31 31 32 33 34 35 36
STRING               : 15
STRING_LITERAL       : 67
TRUE                 : 69
UMINUS               : 58
WHILE                : 30
WRITE                : 34
error                : 27

Nonterminals, with rules where they appear

assign               : 25 31 31
block                : 3 4 28 29 29 30 31
breakStmt            : 21
dec                  : 5 6
decSeq               : 1 6
empty                : 71 77 79 83
exp                  : 28 29 30 31 36 38 39 40 41 42 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59 59 59 63 65 84 85
expList              : 34 37
expSeq               : 82 85
forStmt              : 20
ifStmt               : 18
literal              : 11 62 80 81
literalSeq           : 13 81
param                : 72 73
paramList            : 3 4
paramSeq             : 70 73
program              : 0
readStmt             : 23
returnStmt           : 22
stmt                 : 78
stmtList             : 17 78
subCall              : 26 60
type                 : 4 7 74 75
var                  : 33 38 39 40 41 42 43 61
varDec               : 2 76
varDecList           : 17 76
varSpec              : 8 9
varSpecSeq           : 7 9
whileStmt            : 19
writeStmt            : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (5) decSeq -> . dec
    (6) decSeq -> . dec decSeq
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LKEY block RKEY
    (4) dec -> . type ID LPAREN paramList RPAREN LKEY block RKEY
    (7) varDec -> . type varSpecSeq SEMICOLON
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    program                        shift and go to state 1
    decSeq                         shift and go to state 2
    dec                            shift and go to state 3
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 3

    (5) decSeq -> dec .
    (6) decSeq -> dec . decSeq
    (5) decSeq -> . dec
    (6) decSeq -> . dec decSeq
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LKEY block RKEY
    (4) dec -> . type ID LPAREN paramList RPAREN LKEY block RKEY
    (7) varDec -> . type varSpecSeq SEMICOLON
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    $end            reduce using rule 5 (decSeq -> dec .)
    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    dec                            shift and go to state 3
    decSeq                         shift and go to state 10
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 4

    (2) dec -> varDec .

    ID              reduce using rule 2 (dec -> varDec .)
    INT             reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOLEAN         reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 5

    (3) dec -> ID . LPAREN paramList RPAREN LKEY block RKEY

    LPAREN          shift and go to state 11


state 6

    (4) dec -> type . ID LPAREN paramList RPAREN LKEY block RKEY
    (7) varDec -> type . varSpecSeq SEMICOLON
    (8) varSpecSeq -> . varSpec
    (9) varSpecSeq -> . varSpec COMMA varSpecSeq
    (10) varSpec -> . ID
    (11) varSpec -> . ID ASSIGN literal
    (12) varSpec -> . ID LCOR NUMBER RCOR
    (13) varSpec -> . ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    ID              shift and go to state 12

    varSpecSeq                     shift and go to state 13
    varSpec                        shift and go to state 14

state 7

    (14) type -> INT .

    ID              reduce using rule 14 (type -> INT .)


state 8

    (15) type -> STRING .

    ID              reduce using rule 15 (type -> STRING .)


state 9

    (16) type -> BOOLEAN .

    ID              reduce using rule 16 (type -> BOOLEAN .)


state 10

    (6) decSeq -> dec decSeq .

    $end            reduce using rule 6 (decSeq -> dec decSeq .)


state 11

    (3) dec -> ID LPAREN . paramList RPAREN LKEY block RKEY
    (70) paramList -> . paramSeq
    (71) paramList -> . empty
    (72) paramSeq -> . param
    (73) paramSeq -> . param COMMA paramSeq
    (86) empty -> .
    (74) param -> . type ID
    (75) param -> . type ID LCOR RCOR
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    RPAREN          reduce using rule 86 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    paramList                      shift and go to state 15
    paramSeq                       shift and go to state 16
    empty                          shift and go to state 17
    param                          shift and go to state 18
    type                           shift and go to state 19

state 12

    (4) dec -> type ID . LPAREN paramList RPAREN LKEY block RKEY
    (10) varSpec -> ID .
    (11) varSpec -> ID . ASSIGN literal
    (12) varSpec -> ID . LCOR NUMBER RCOR
    (13) varSpec -> ID . LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    LPAREN          shift and go to state 20
    COMMA           reduce using rule 10 (varSpec -> ID .)
    SEMICOLON       reduce using rule 10 (varSpec -> ID .)
    ASSIGN          shift and go to state 21
    LCOR            shift and go to state 22


state 13

    (7) varDec -> type varSpecSeq . SEMICOLON

    SEMICOLON       shift and go to state 23


state 14

    (8) varSpecSeq -> varSpec .
    (9) varSpecSeq -> varSpec . COMMA varSpecSeq

    SEMICOLON       reduce using rule 8 (varSpecSeq -> varSpec .)
    COMMA           shift and go to state 24


state 15

    (3) dec -> ID LPAREN paramList . RPAREN LKEY block RKEY

    RPAREN          shift and go to state 25


state 16

    (70) paramList -> paramSeq .

    RPAREN          reduce using rule 70 (paramList -> paramSeq .)


state 17

    (71) paramList -> empty .

    RPAREN          reduce using rule 71 (paramList -> empty .)


state 18

    (72) paramSeq -> param .
    (73) paramSeq -> param . COMMA paramSeq

    RPAREN          reduce using rule 72 (paramSeq -> param .)
    COMMA           shift and go to state 26


state 19

    (74) param -> type . ID
    (75) param -> type . ID LCOR RCOR

    ID              shift and go to state 27


state 20

    (4) dec -> type ID LPAREN . paramList RPAREN LKEY block RKEY
    (70) paramList -> . paramSeq
    (71) paramList -> . empty
    (72) paramSeq -> . param
    (73) paramSeq -> . param COMMA paramSeq
    (86) empty -> .
    (74) param -> . type ID
    (75) param -> . type ID LCOR RCOR
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    RPAREN          reduce using rule 86 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    type                           shift and go to state 19
    paramList                      shift and go to state 28
    paramSeq                       shift and go to state 16
    empty                          shift and go to state 17
    param                          shift and go to state 18

state 21

    (11) varSpec -> ID ASSIGN . literal
    (66) literal -> . NUMBER
    (67) literal -> . STRING_LITERAL
    (68) literal -> . FALSE
    (69) literal -> . TRUE

    NUMBER          shift and go to state 30
    STRING_LITERAL  shift and go to state 31
    FALSE           shift and go to state 32
    TRUE            shift and go to state 33

    literal                        shift and go to state 29

state 22

    (12) varSpec -> ID LCOR . NUMBER RCOR
    (13) varSpec -> ID LCOR . NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    NUMBER          shift and go to state 34


state 23

    (7) varDec -> type varSpecSeq SEMICOLON .

    ID              reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    INT             reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    STRING          reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    BOOLEAN         reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    $end            reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    error           reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    IF              reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    WHILE           reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    FOR             reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    BREAK           reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    RETURN          reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    READ            reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    WRITE           reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)
    RKEY            reduce using rule 7 (varDec -> type varSpecSeq SEMICOLON .)


state 24

    (9) varSpecSeq -> varSpec COMMA . varSpecSeq
    (8) varSpecSeq -> . varSpec
    (9) varSpecSeq -> . varSpec COMMA varSpecSeq
    (10) varSpec -> . ID
    (11) varSpec -> . ID ASSIGN literal
    (12) varSpec -> . ID LCOR NUMBER RCOR
    (13) varSpec -> . ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    ID              shift and go to state 36

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 35

state 25

    (3) dec -> ID LPAREN paramList RPAREN . LKEY block RKEY

    LKEY            shift and go to state 37


state 26

    (73) paramSeq -> param COMMA . paramSeq
    (72) paramSeq -> . param
    (73) paramSeq -> . param COMMA paramSeq
    (74) param -> . type ID
    (75) param -> . type ID LCOR RCOR
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    param                          shift and go to state 18
    paramSeq                       shift and go to state 38
    type                           shift and go to state 19

state 27

    (74) param -> type ID .
    (75) param -> type ID . LCOR RCOR

    COMMA           reduce using rule 74 (param -> type ID .)
    RPAREN          reduce using rule 74 (param -> type ID .)
    LCOR            shift and go to state 39


state 28

    (4) dec -> type ID LPAREN paramList . RPAREN LKEY block RKEY

    RPAREN          shift and go to state 40


state 29

    (11) varSpec -> ID ASSIGN literal .

    COMMA           reduce using rule 11 (varSpec -> ID ASSIGN literal .)
    SEMICOLON       reduce using rule 11 (varSpec -> ID ASSIGN literal .)


state 30

    (66) literal -> NUMBER .

    COMMA           reduce using rule 66 (literal -> NUMBER .)
    SEMICOLON       reduce using rule 66 (literal -> NUMBER .)
    PLUS            reduce using rule 66 (literal -> NUMBER .)
    MINUS           reduce using rule 66 (literal -> NUMBER .)
    MULT            reduce using rule 66 (literal -> NUMBER .)
    DIVIDE          reduce using rule 66 (literal -> NUMBER .)
    MOD             reduce using rule 66 (literal -> NUMBER .)
    EQUALS          reduce using rule 66 (literal -> NUMBER .)
    DIFFERENT       reduce using rule 66 (literal -> NUMBER .)
    GT              reduce using rule 66 (literal -> NUMBER .)
    GTE             reduce using rule 66 (literal -> NUMBER .)
    LT              reduce using rule 66 (literal -> NUMBER .)
    LTE             reduce using rule 66 (literal -> NUMBER .)
    AND             reduce using rule 66 (literal -> NUMBER .)
    OR              reduce using rule 66 (literal -> NUMBER .)
    QMARK           reduce using rule 66 (literal -> NUMBER .)
    RKEY            reduce using rule 66 (literal -> NUMBER .)
    RPAREN          reduce using rule 66 (literal -> NUMBER .)
    RCOR            reduce using rule 66 (literal -> NUMBER .)
    COLON           reduce using rule 66 (literal -> NUMBER .)


state 31

    (67) literal -> STRING_LITERAL .

    COMMA           reduce using rule 67 (literal -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 67 (literal -> STRING_LITERAL .)
    PLUS            reduce using rule 67 (literal -> STRING_LITERAL .)
    MINUS           reduce using rule 67 (literal -> STRING_LITERAL .)
    MULT            reduce using rule 67 (literal -> STRING_LITERAL .)
    DIVIDE          reduce using rule 67 (literal -> STRING_LITERAL .)
    MOD             reduce using rule 67 (literal -> STRING_LITERAL .)
    EQUALS          reduce using rule 67 (literal -> STRING_LITERAL .)
    DIFFERENT       reduce using rule 67 (literal -> STRING_LITERAL .)
    GT              reduce using rule 67 (literal -> STRING_LITERAL .)
    GTE             reduce using rule 67 (literal -> STRING_LITERAL .)
    LT              reduce using rule 67 (literal -> STRING_LITERAL .)
    LTE             reduce using rule 67 (literal -> STRING_LITERAL .)
    AND             reduce using rule 67 (literal -> STRING_LITERAL .)
    OR              reduce using rule 67 (literal -> STRING_LITERAL .)
    QMARK           reduce using rule 67 (literal -> STRING_LITERAL .)
    RKEY            reduce using rule 67 (literal -> STRING_LITERAL .)
    RPAREN          reduce using rule 67 (literal -> STRING_LITERAL .)
    RCOR            reduce using rule 67 (literal -> STRING_LITERAL .)
    COLON           reduce using rule 67 (literal -> STRING_LITERAL .)


state 32

    (68) literal -> FALSE .

    COMMA           reduce using rule 68 (literal -> FALSE .)
    SEMICOLON       reduce using rule 68 (literal -> FALSE .)
    PLUS            reduce using rule 68 (literal -> FALSE .)
    MINUS           reduce using rule 68 (literal -> FALSE .)
    MULT            reduce using rule 68 (literal -> FALSE .)
    DIVIDE          reduce using rule 68 (literal -> FALSE .)
    MOD             reduce using rule 68 (literal -> FALSE .)
    EQUALS          reduce using rule 68 (literal -> FALSE .)
    DIFFERENT       reduce using rule 68 (literal -> FALSE .)
    GT              reduce using rule 68 (literal -> FALSE .)
    GTE             reduce using rule 68 (literal -> FALSE .)
    LT              reduce using rule 68 (literal -> FALSE .)
    LTE             reduce using rule 68 (literal -> FALSE .)
    AND             reduce using rule 68 (literal -> FALSE .)
    OR              reduce using rule 68 (literal -> FALSE .)
    QMARK           reduce using rule 68 (literal -> FALSE .)
    RKEY            reduce using rule 68 (literal -> FALSE .)
    RPAREN          reduce using rule 68 (literal -> FALSE .)
    RCOR            reduce using rule 68 (literal -> FALSE .)
    COLON           reduce using rule 68 (literal -> FALSE .)


state 33

    (69) literal -> TRUE .

    COMMA           reduce using rule 69 (literal -> TRUE .)
    SEMICOLON       reduce using rule 69 (literal -> TRUE .)
    PLUS            reduce using rule 69 (literal -> TRUE .)
    MINUS           reduce using rule 69 (literal -> TRUE .)
    MULT            reduce using rule 69 (literal -> TRUE .)
    DIVIDE          reduce using rule 69 (literal -> TRUE .)
    MOD             reduce using rule 69 (literal -> TRUE .)
    EQUALS          reduce using rule 69 (literal -> TRUE .)
    DIFFERENT       reduce using rule 69 (literal -> TRUE .)
    GT              reduce using rule 69 (literal -> TRUE .)
    GTE             reduce using rule 69 (literal -> TRUE .)
    LT              reduce using rule 69 (literal -> TRUE .)
    LTE             reduce using rule 69 (literal -> TRUE .)
    AND             reduce using rule 69 (literal -> TRUE .)
    OR              reduce using rule 69 (literal -> TRUE .)
    QMARK           reduce using rule 69 (literal -> TRUE .)
    RKEY            reduce using rule 69 (literal -> TRUE .)
    RPAREN          reduce using rule 69 (literal -> TRUE .)
    RCOR            reduce using rule 69 (literal -> TRUE .)
    COLON           reduce using rule 69 (literal -> TRUE .)


state 34

    (12) varSpec -> ID LCOR NUMBER . RCOR
    (13) varSpec -> ID LCOR NUMBER . RCOR ASSIGN LKEY literalSeq RKEY

    RCOR            shift and go to state 41


state 35

    (9) varSpecSeq -> varSpec COMMA varSpecSeq .

    SEMICOLON       reduce using rule 9 (varSpecSeq -> varSpec COMMA varSpecSeq .)


state 36

    (10) varSpec -> ID .
    (11) varSpec -> ID . ASSIGN literal
    (12) varSpec -> ID . LCOR NUMBER RCOR
    (13) varSpec -> ID . LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    COMMA           reduce using rule 10 (varSpec -> ID .)
    SEMICOLON       reduce using rule 10 (varSpec -> ID .)
    ASSIGN          shift and go to state 21
    LCOR            shift and go to state 22


state 37

    (3) dec -> ID LPAREN paramList RPAREN LKEY . block RKEY
    (17) block -> . varDecList stmtList
    (76) varDecList -> . varDec varDecList
    (77) varDecList -> . empty
    (7) varDec -> . type varSpecSeq SEMICOLON
    (86) empty -> .
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN
